src/objects/Crediting_Report__c.object
<CustomObject>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <label>Case Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Owner__c</fullName>
        <label>Case Owner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complaint_From__c</fullName>
        <label>Complaint From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Complaint_To__c</fullName>
        <label>Complaint To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_Amount__c</fullName>
        <label>Credit Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_Time_Opened__c</fullName>
        <label>Date/Time Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Goodwill_Amount__c</fullName>
        <label>Goodwill Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <label>Product Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publication__c</fullName>
        <label>Publication</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <label>Sub Category</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_End_Date__c</fullName>
        <label>Subscription End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscription_Start_Date__c</fullName>
        <label>Subscription Start Date</label>
        <type>Date</type>
    </fields>
    <label>Crediting Report</label>
    <nameField>
        <label>Crediting Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Crediting Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>